# LoRaMac-node

cmake/: pico_sdk_import.cmake
src/: CMakeLists.txt
src/boards/RP2040/: CMakeLists.txt
src/boards/RPI/: CMakeLists.txt
